<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="api_key">AIzaSyD09CYCGjr-h6gCq3ImZe6pnglvuCsGcMU</string>
    <string name="please_wait">Please wait</string>
    <string name="app_name_new" translatable="false">VAXTRAX</string>
    <string name="email">Email / Mobile No.</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="msg_valid_email">Please enter valid email</string>
    <string name="msg_valid_password">Please enter password</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="signup">Signup</string>
    <string name="details_screen">Details</string>
    <string name="permissions_denied">Permissions denied. Please allow in app settings for additional functionality.</string>
    <string name="title_home">Home Task</string>
    <string name="title_payment">Payment Wallet</string>
    <string name="title_whistory">Withdrawal  History</string>
    <string name="title_myteam">My Team</string>
    <string name="title_installapp">Install Application</string>
    <string name="title_noti">Notification</string>
    <string name="title_faq">Faq</string>
    <string name="title_contactus">Contact Us</string>
    <string name="title_refer">Refer Earn</string>
    <string name="title_logout">Logout</string>
    <string name="error_message_location">"Location is not defined"</string>
    <string name="error_message_network">Check your connection and try again.</string>
    <string name="error_message_call">Call failed</string>
    <string name="error_message_somethingwrong">Something went wrong, Please try later</string>
    <string name="error_message_clienterror">Client error</string>
    <string name="error_message_servererror">Server error</string>
    <string name="error_message_no_record">No content found</string>
    <string name="error_message_empty">Oops, there are no results to display</string>
    <string name="error_message_error">Oops, there was an error fetching the data</string>
    <string name="error_message_checkagain">Check again</string>
    <string name="error_message_tryagain">Try again</string>
    <string name="msg_success">You are login successfully</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="button_login">Signin</string>
    <string name="button_signup">Signup</string>
    <string name="hint_email_or_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phonenumber">Mobile No.</string>
    <string name="hint_code">Reference code</string>
    <string name="forgot">Forgot Password</string>
    <string name="donthave">Don\'t have an account ? <b>SIGN UP!</b></string>
    <string name="btn_next">Next</string>
    <string name="txt_withdraw_amout">Withdraw Amount</string>
    <string name="txt_withdraw">Withdraw</string>
    <string name="etx_payment_number">Payment Number</string>
    <string name="txt_currnet_balance">Current Balance</string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="piker_cam">Camera</string>
    <string name="piker_gall">Gallery</string>
    <string name="piker_chosevideo">Choose Video</string>
    <string name="piker_choseimage">Choose Image</string>
    <string name="txt_file_toolarge">File is too large. Maximum size is %1$sMB</string>
    <string name="retry">Retry</string>
    <string name="no_connection">No internet connection. Please check your connection and try again.</string>
    <string name="no_connection_msg">Please check your internet connectivity and try again</string>
    <string name="nv_settings">Settings</string>
    <string name="nv_home">Home</string>
    <string name="nv_bookmark">Bookmark</string>
    <string name="Failure">Failure</string>
    <string name="label_vendor">Vendor</string>
    <string name="label_user">User</string>
    <string name="label_login">Login</string>
    <string name="label_login_subtext">Enhancing Community Life</string>
    <string name="label_email">Email</string>
    <string name="label_email_govt">Email/Government ID</string>
    <string name="label_password">Password</string>
    <string name="label_remember_me">Remember Me</string>
    <string name="label_forgot_password">Forgot Password ?</string>
    <string name="label_forgot_password_title">Forgot Password</string>
    <string name="label_forgot_password_subtext">Confirm your Mobile No. and we\'ll send the\n instructions.</string>
    <string name="label_do_sign_up">Don\'t have an account? <u><b><font fgcolor='#1D4792'> Sign up </font></b></u></string>
    <string name="label_sign_up"><u>Sign up</u></string>
    <string name="label_sign_up1">Sign Up</string>
    <string name="label_registration">Registration</string>
    <string name="label_phone_no">Mobile No.</string>
    <string name="label_phone_no_register">Mobile No.*</string>
    <string name="label_password_register">Password*</string>
    <string name="label_register">Register</string>
    <string name="label_already_sign_in">Already have an account? <u><b><font fgcolor='#1D4792'>Sign in</font></b></u></string>
    <string name="label_otp">OTP</string>
    <string name="label_otp_text">Confirm your email and we\'ll send the\n instructions.</string>
    <string name="label_enter_otp_received">Enter the OTP you received</string>
    <string name="label_otp_not_received">Didn\'t receive the OTP?</string>
    <string name="label_request_otp">Request for a new one in 30 seconds</string>
    <string name="label_resend_otp"><u><b><font fgcolor='#1D4792'>Resend OTP</font></b></u></string>
    <string name="label_verify">Verify</string>
    <string name="label_send">Send</string>
    <string name="label_vendor_login">I am a Vendor</string>
    <string name="label_clinic">I am a Lab/clinic</string>
    <string name="label_vaccine_history">Vaccine History</string>
    <string name="label_vaccine_card">Vaccine Card</string>
    <string name="label_vaccine_qr_code">QR Code</string>
    <string name="label_covid_test_status">COVID Test Status</string>
    <string name="label_test_history">Test History</string>
    <string name="label_test_history_covid">Covid Test History</string>
    <string name="label_test_upload"> Upload Test</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_information">Information</string>
    <string name="label_upload_document">Upload Document</string>
    <string name="label_upload_info">Upload Health Info</string>
    <string name="label_covid_status">Covid Test Status</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_events">Events</string>
    <string name="label_vaccine_taken_list">Vaccine List</string>
    <string name="label_upload_file">Upload File</string>
    <string name="label_logout">Logout</string>
    <string name="label_share">Share</string>
    <string name="label_vaccinations">Vaccinations</string>
    <string name="label_vaccinations_covid">Covid Test</string>
    <string name="label_vaccinated_on">Vaccinated On</string>
    <string name="label_test_on">Tested On</string>
    <string name="label_upload_text">Click to upload document \n(PDF/JPG/PNG Max 5MB)</string>
    <string name="label_upload_images">Add Banner images \n(PDF/JPG/PNG Max 5MB)</string>
    <string name="label_upload_text_b">Click to upload business \n(PDF/JPG/PNG Max 5MB)</string>
    <string name="label_doc_name">Selected Document: %s</string>
    <string name="create">Create</string>
    <string name="label_hospital">Institute:\u0020</string>
    <string name="label_kit">Test Kit:\u0020</string>
    <string name="label_date">Date:\u0020</string>
    <string name="label_status">Status:\u0020</string>
    <string name="label_test">Test:\u0020</string>
    <string name="label_dose">Dose:\u0020</string>
    <string name="label_batch_no_row">SN:\u0020</string>
    <string name="label_hospital_name">Lab/Clinic Name</string>
    <string name="label_batch_no">Batch/Serial Number</string>
    <string name="label_phone_number">User Mobile No.*</string>
    <string name="label_test_status"> Test Status</string>
    <string name="label_vaccine_status">Vaccine Status</string>
    <string name="label_certify">Certify</string>
    <string name="label_fee">Fee</string>
    <string name="label_date1">Date</string>
    <string name="label_time">Time</string>
    <string name="label_date_time" formatted="false">%d:%d</string>
    <string name="label_no_data">No data available…</string>
    <string name="select_type">Vaccine Type</string>
    <string name="select_dose">Select Dose</string>
    <string name="select">Select</string>
    <string name="label_day">Day</string>
    <string name="label_thank_you">Thank You!</string>
    <string name="label_uploaded">Uploaded for Review</string>
    <string name="label_otp_sent">Otp sent successfully.</string>
    <string name="label_title">Title*</string>
    <string name="label_event_name">Event Name*</string>
    <string name="label_start_time">Start Date and Time</string>
    <string name="label_end_time">End Date and Time</string>
    <string name="label_private_event">Private Event</string>
    <string name="label_about_event">About Event</string>
    <string name="label_contact_detail">Contact Details </string>
    <string name="read_more">Read more. </string>
    <string name="read_less">Less. </string>
    <string name="label_public_event">Public Event</string>
    <string name="label_event_Images">Event Images</string>
    <string name="label_description">Description</string>
    <string name="label_gender">Gender</string>
    <string name="select_title">Select title</string>
    <string name="select_product">Select product</string>
    <string name="select_gender">Select gender</string>
    <string name="select_ethnicity">Select Ethnicity</string>
    <string name="select_citizenship">Select Citizenship</string>
    <string name="label_given_name">Given Name*</string>
    <string name="succesfully_added">Successfully Added</string>
    <string name="go_to_event_page">or Go to <u><font color='#255CA4'>Event Page</font></u>.</string>
    <string name="pin_1">Enter Pin </string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="authentication">Authentication</string>
    <string name="provide_pin">Please enter user 4 digit pin for authentication and access. </string>
    <string name="submit">Submit</string>
    <string name="add_more">Do you want to add more sub events.? <br> <u><font color='#255CA4'>Click here</font></u>.</br></string>
</resources>