<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:visibility="visible"
    app:cardCornerRadius="@dimen/_8sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/llHealth"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:orientation="vertical"

       >

        <LinearLayout
            android:id="@+id/test_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.global.vtg.utils.textView.BoldTextView
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_test"
                android:textColor="@color/black" />

            <com.global.vtg.utils.textView.RegularTextView
                android:id="@+id/tvTestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/testKit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">


            <com.global.vtg.utils.textView.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_kit"
                android:textColor="@color/black" />

            <com.global.vtg.utils.textView.RegularTextView
                android:id="@+id/tvKit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <com.global.vtg.utils.textView.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hospital"
                android:textColor="@color/black" />

            <com.global.vtg.utils.textView.RegularTextView
                android:id="@+id/tvHospitalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.global.vtg.utils.textView.BoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_date"
                        android:textColor="@color/black" />

                    <com.global.vtg.utils.textView.RegularTextView
                        android:id="@+id/tvDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.global.vtg.utils.textView.BoldTextView
                        android:id="@+id/tvStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_status"
                        android:textColor="@color/black" />

                    <com.global.vtg.utils.textView.RegularTextView
                        android:id="@+id/tvStatusValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.global.vtg.utils.textView.BoldTextView
                        android:id="@+id/tvBatchNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_batch_no_row"
                        android:textColor="@color/black" />

                    <com.global.vtg.utils.textView.RegularTextView
                        android:id="@+id/tvBatchNoValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
       android:paddingEnd="@dimen/_12sdp"
        android:layout_centerVertical="true"
        tools:ignore="RtlSymmetry">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/addedBy"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_edit" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivStatus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toEndOf="@+id/addedBy"
android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>
</androidx.cardview.widget.CardView>