<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:visibility="visible"
    app:cardCornerRadius="@dimen/_8sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:id="@+id/llVaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/button"
            android:orientation="vertical">

            <com.global.vtg.utils.textView.BoldTextView
                android:id="@+id/tvVaccineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal">

                <com.global.vtg.utils.textView.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_hospital"
                    android:textColor="@color/black" />

                <com.global.vtg.utils.textView.RegularTextView
                    android:id="@+id/tvHospitalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.global.vtg.utils.textView.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_date"
                    android:textColor="@color/black" />

                <com.global.vtg.utils.textView.RegularTextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.global.vtg.utils.textView.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_dose"
                    android:textColor="@color/black" />

                <com.global.vtg.utils.textView.RegularTextView
                    android:id="@+id/tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.global.vtg.utils.textView.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_batch_no_row"
                    android:textColor="@color/black" />

                <com.global.vtg.utils.textView.RegularTextView
                    android:id="@+id/tvBatchNoValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/addedBy"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_edit" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivStatus"
                android:layout_width="30dp"
                android:visibility="gone"
                android:layout_height="30dp"
                android:layout_toEndOf="@+id/addedBy"

                />

        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>